# form-py

./: plantilla_formulario.docx  pyproject.toml  requirements.txt  server-gemini.py  server-new.py  server.py  ~$antilla_formulario.docx
